Einleitung ergänzt; kleine Korrekturen

--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -2,28 +2,31 @@
 \chapterpreamble{Ein Schiedsgerichtshandbuch ist geeignet, erforderlich und auch angemessen, die Qualität der Rechtsprechung innerhalb der Parteigerichte der Piratenpartei zu verbessern.}
 
 \chapter{Einleitung}
-Schon die Verfassung gibt den politischen Parteien in Art. 21\index[paridx]{GG!Art.~21} eine ganz besondere Stellung.
-Ihre Gründung ist frei heißt es dort in Absatz 1 Satz 2\index[paridx]{GG!Art.~21!Abs.~1 Satz~2}.
-Doch nicht nur die Gründung der Parteien ist frei, auch die innere Struktur ist ihnen --- unter beachtung gewisser demokratischer Mindeststandards gemäß Art.~21 Abs.~1 Satz~3 GG\index[paridx]{GG!Art.~21!Abs.~1 Satz~3} --- selbst überlassen.
+Schon die Verfassung gibt den politischen Parteien in Art.~21\index[paridx]{GG!Art.~21} eine ganz besondere Stellung.
+\Zitat{Ihre Gründung ist frei} heißt es dort in Absatz~1 Satz~2\index[paridx]{GG!Art.~21!Abs.~1 Satz~2}.
+Doch nicht nur die Gründung der Parteien ist frei, auch die innere Struktur ist ihnen --- unter Beachtung gewisser demokratischer Mindeststandards gemäß Art.~21 Abs.~1 Satz~3 GG\index[paridx]{GG!Art.~21!Abs.~1 Satz~3} --- selbst überlassen.
 Sie sollen unabhängig sein von staatlichem Einfluss.
 
 Das hat einen ganz einfachen Grund: Politische Parteien sind ein wichtiger Spieler im Machtgefüge der Bundesrepublik Deutschland.
 Sie sind es, die Einfluss auf den Staat haben sollen und nicht umgekehrt.
 Wo es aber um Macht geht, wird gestritten.
 Und das nicht selten.
-Das war Die Schiedsgerichtsordnungselbst dem Gesetzgeber bewusst.
+Das war selbst dem Gesetzgeber bewusst.
 
-Um die Staatsferne der Parteien zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
-Parteischiedsgericht handeln dabei nach ihrer von ihrer eigenen Partei erlassenen Verfahrensordnung.
+Um die \emph{Staatsferne der Parteien}\index[idx]{Partei!\~{}en!Staatsferne} zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
+Parteischiedsgerichte handeln dabei nach ihrer von ihrer eigenen Partei erlassenen Verfahrensordnung.
 
-Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten und sich strikt an  die von der eigenen Partei erlassene Prozessordnung halten.
+Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten (vgl. \S~14 Abs.~4 PartG\index[paridx]{PartG!\S~14!Abs.~4} und sich strikt an die von der eigenen Partei erlassene Prozessordnung halten.
 
-Da gerade in der Piratenpartei oft unerfahrene und Laien die Richterämter übernehmen, haben wir dieses Handbuch verfasst, um all denen einen Leitfaden an die Hand zu geben, die sich in dieses Amt einarbeiten wollen.
-Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben und kann so als Nachschlagweg genutzt werden.
+Da gerade in der Piratenpartei oft Unerfahrene und Laien die Richterämter übernehmen, haben wir dieses Handbuch verfasst, um all denen einen Leitfaden an die Hand zu geben, die sich in dieses Amt einarbeiten wollen.
+Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben. Das Handbuch kann so als Nachschlagewerk genutzt werden.
 
-Zwei Juristen, drei Meinungen lautet ein geflügeltes Wort.
-Einen Anspruch auf Vollständigkeit der Darstellung aller Meinungen und Argumente zu sämtlichen Auslegungen der relevanten Normen könnten wir schon gar nicht gerecht werden.
-Wir haben daher beschlossen, das Handbuch Etappenweise zu vervollständigen und uns dabei an der Rechtsprechung des Bundesschiedsgerichtes und der Landesschiedsgerichte zu orientieren und so die typischen Probleme und Konstellationen dazustellen, mit denen Richter in der Parteienschiedsgerichtbarkeit konfrontiert sein werden.
+\Zitat{Zwei Juristen, drei Meinungen} lautet ein geflügeltes Wort.
+Einen Anspruch auf Vollständigkeit der Darstellung erheben wir nicht. Dem Anspruch einer vollständigen Widergabe aller Meinungen und Argumente zu sämtlichen Auslegungen der relevanten Normen könnten wir schon gar nicht gerecht werden.
+Das vorliegende Handbuch soll keine Kommentierung sein, sondern ein praktischer Leitfaden. Das reduziert den Umfang um tiefgehende juristische Auseinandersetzung mit dem einen oder anderen Problem unserer Satzung --- lässt aber dennoch beträchtlichen Raum für den Umfang des Werkes übrig.
+Wir haben daher beschlossen, das Handbuch etappenweise zu vervollständigen und uns dabei an der Rechtsprechung des Bundesschiedsgerichtes und der Landesschiedsgerichte zu orientieren und so die typischen Probleme und Konstellationen dazustellen, mit denen Richter in der Parteienschiedsgerichtbarkeit konfrontiert sein werden.
+
+%Besonderer Dank gilt (Namen und was sie gemacht hätten). Ebenso gilt es den derzeitigen und ehemaligen Richterinnen und Richtern der Schiedsgerichte aller Gliederungen für ihr ehrenamtliches Engagement um die Piratenpartei zu danken.
 
 \vspace{20mm}
 
