--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -13,7 +13,7 @@ Wo es aber um Macht geht, wird gestritten.
 Und das nicht selten.
 Das war selbst dem Gesetzgeber bewusst.
 
-Um die \emph{Staatsferne der Parteien}\index[idx]{Partei!\~{}en!Staatsferne} zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
+Um die \emph{Staatsferne der Parteien}\index[idx]{Partei!Staatsferne} zu sichern und die eigenen staatlichen Gerichte nicht mit den parteiinternen Streitigkeiten zu belasten, wurde das Institut der Parteischiedsgerichtsbarkeit geschaffen.
 Parteischiedsgerichte handeln dabei nach ihrer von ihrer eigenen Partei erlassenen Verfahrensordnung.
 
 Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsgerichte mitunter mit Laien und nicht berufserfahrenen Richtern den Parteischiedsgerichten nicht die gänzliche Komplexität der großen Prozessordnungen aufbürdet, so müssen sie doch die allgemeinen Grundsätze eines gerechten Gerichtsverfahrens einhalten (vgl. \S~14 Abs.~4 PartG\index[paridx]{PartG!\S~14!Abs.~4} und sich strikt an die von der eigenen Partei erlassene Prozessordnung halten.
