Einleitung um »HowTo« ergänzt

--- a/Einleitung.tex
+++ b/Einleitung.tex
@@ -21,10 +21,12 @@ Auch wenn der Gesetzgeber im Wissen um die ehrenamtliche Besetzung der Schiedsge
 Da gerade in der Piratenpartei oft Unerfahrene und Laien die Richterämter übernehmen, haben wir dieses Handbuch verfasst, um all denen einen Leitfaden an die Hand zu geben, die sich in dieses Amt einarbeiten wollen.
 Auch erfahrenen Richtern wird hier eine Übersicht über Regelungen der Schiedsgerichtsordnung und der zugehörigen Rechtsprechung an die Hand gegeben. Das Handbuch kann so als Nachschlagewerk genutzt werden.
 
+Die grobe Gliederung des Handbuchs ist an einem üblichen Verfahrenslauf bzw. einer üblichen Fallprüfung orientiert: Die innere Organisation der Schiedsgerichte, z.B. unter Berücksichtigung der Vorschriften über deren Geschäftsordnungen, und Zusammensetzung des Gerichts werden vor der Anrufung durch eine Streitpartei behandelt; die Zulässigkeitsvoraussetzungen der Klage vor den Grundlagen der Satzungsauslegung erläutert. Jedem dieser Kapitel ist ein Verzeichnis der im jeweiligen Kapitel zitierten Urteile vorangestellt. Auch die verwendete Literatur findet sich hier wieder, wobei wir darauf geachtet haben, möglichst elektronisch (und frei) verfügbare Literatur zu verwenden und insgesamt einen ausufernden Fußnotenapparat zu vermeiden.
+
 \Zitat{Zwei Juristen, drei Meinungen} lautet ein geflügeltes Wort.
 Einen Anspruch auf Vollständigkeit der Darstellung erheben wir nicht. Dem Anspruch einer vollständigen Widergabe aller Meinungen und Argumente zu sämtlichen Auslegungen der relevanten Normen könnten wir schon gar nicht gerecht werden.
 Das vorliegende Handbuch soll keine Kommentierung sein, sondern ein praktischer Leitfaden. Das reduziert den Umfang um tiefgehende juristische Auseinandersetzung mit dem einen oder anderen Problem unserer Satzung --- lässt aber dennoch beträchtlichen Raum für den Umfang des Werkes übrig.
-Wir haben daher beschlossen, das Handbuch etappenweise zu vervollständigen und uns dabei an der Rechtsprechung des Bundesschiedsgerichtes und der Landesschiedsgerichte zu orientieren und so die typischen Probleme und Konstellationen dazustellen, mit denen Richter in der Parteienschiedsgerichtbarkeit konfrontiert sein werden.
+Wir haben daher beschlossen, das Handbuch etappenweise zu vervollständigen und uns dabei an der Rechtsprechung des Bundesschiedsgerichtes und der Landesschiedsgerichte zu orientieren und so die typischen Probleme und Konstellationen dazustellen, mit denen Richter in der Parteienschiedsgerichtbarkeit konfrontiert sein werden. Den noch nicht fertiggestellten Kapitel haben wir --- gewissermaßen als vorläufigen Platzhalter --- eine Kurzzusammenfassung der wichtigsten Dinge vorangestellt, die es unserer Meinung nach in diesem Bereich zu beachten gilt.
 
 %Besonderer Dank gilt (Namen und was sie gemacht hätten). Ebenso gilt es den derzeitigen und ehemaligen Richterinnen und Richtern der Schiedsgerichte aller Gliederungen für ihr ehrenamtliches Engagement um die Piratenpartei zu danken.
 
